# search-ann-benchmark

./: .gitignore  README.md  download.sh  milvus-compose.yaml  pyproject.toml  requirements.txt  run-chroma.ipynb  run-elasticsearch.ipynb  run-milvus.ipynb  run-opensearch.ipynb  run-pgvector.ipynb  run-qdrant.ipynb  run-vespa.ipynb  run-weaviate.ipynb
.claude/skills/upgrade-engine-version/: SKILL.md
.github/workflows/: run-chroma-linux.yml  run-clickhouse-linux.yml  run-elasticsearch-bbq-disk-2bit-linux.yml  run-elasticsearch-bbq-disk-4bit-linux.yml  run-elasticsearch-bbq-disk-linux.yml  run-elasticsearch-bbq-linux.yml  run-elasticsearch-int4-linux.yml  run-elasticsearch-int8-linux.yml  run-elasticsearch-linux.yml  run-lancedb-linux.yml  run-milvus-linux.yml  run-opensearch-byte-linux.yml  run-opensearch-faiss-linux.yml  run-opensearch-linux.yml  run-pgvector-linux.yml  run-qdrant-int8-linux.yml  run-qdrant-linux.yml  run-redisstack-linux.yml  run-vald-linux.yml  run-vespa-linux.yml  run-weaviate-linux.yml
scripts/: download.sh  get_hardware_info.sh  setup.sh
src/search_ann_benchmark/: __init__.py  cli.py  config.py  runner.py
src/search_ann_benchmark/core/: __init__.py  base.py  docker.py  embedding.py  logging.py  measurement.py  metrics.py
src/search_ann_benchmark/engines/: __init__.py  chroma.py  clickhouse.py  elasticsearch.py  lancedb.py  milvus.py  opensearch.py  pgvector.py  qdrant.py  redisstack.py  vald.py  vespa.py  weaviate.py
tests/: __init__.py  conftest.py  test_config.py  test_metrics.py
tests/engines/: __init__.py  test_registry.py
