[project]
name = "search-ann-benchmark"
version = "0.1.0"
description = "Benchmark suite for Approximate Nearest Neighbor (ANN) search algorithms across vector search engines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
# Engine-specific dependencies
pgvector = [
    "psycopg>=3.1.19",
    "pgvector>=0.3.0",
]
chroma = [
    "chromadb>=1.4.0",
]
milvus = [
    "pymilvus>=2.4.4",
]
redisstack = [
    "redis>=5.0.0",
]
all = [
    "psycopg>=3.1.19",
    "pgvector>=0.3.0",
    "chromadb>=1.4.0",
    "pymilvus>=2.4.4",
    "redis>=5.0.0",
]

[project.scripts]
search-ann-benchmark = "search_ann_benchmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_ann_benchmark"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
